<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="@drawable/general_edittext_border_bg_primary"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fon_type_text"
            android:padding="5dp"

            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radiGroupFonType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonKruvazeKanat"
                android:layout_width="wrap_content"
                android:textSize="10sp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/fon_type_kruvaze_text" />

            <RadioButton
                android:id="@+id/radioButtonFonKanat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/fon_type_fon_text" />

            <RadioButton
                android:id="@+id/radioButtonJaponPanel"
                android:layout_width="wrap_content"
                android:textSize="10sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_height="wrap_content"
                android:text="@string/fon_type_japon_text" />



        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_pile_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="10dp"
        android:background="@drawable/general_edittext_border_bg_primary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pile_type_text"
            android:fontFamily="@font/roboto_regular"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_marginRight="10dp"/>

        <RadioGroup
            android:id="@+id/radiGroupPileType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonAmerican"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="10sp"
                android:text="@string/pile_type_american_text" />

            <RadioButton
                android:id="@+id/radioButtonKanun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textSize="10sp"

                android:text="@string/pile_type_kanun_text" />

            <RadioButton
                android:id="@+id/radioButtonYan"
                android:layout_width="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/pile_type_yan_text" />

            <RadioButton
                android:layout_width="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/other_text" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@android:color/holo_red_light"
            android:text="@string/cancel_button_text"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/primaryDarkColor"
            android:text="Sonraki Adım ->"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>