<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_bg_lightblue"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:cardCornerRadius="3dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryDarkColor"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/JP"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="17sp"
                    android:textStyle="bold" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/general_edittext_border_bg_primary"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/editTextWidth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/width_text"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/editTextHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/height_text"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/general_edittext_border_bg_primary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/direction_text"
                        android:textSize="15sp"
                        android:fontFamily="@font/roboto_regular"/>


                    <RadioGroup
                        android:id="@+id/radio_group_direction"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonJaluziLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Sol" />

                        <RadioButton
                            android:id="@+id/radioButtonJaluziRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Sağ" />
                    </RadioGroup>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/general_edittext_border_bg_primary"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/editTextPattern"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/pattern_text"
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/editTextVariant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/variant_text"
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/editTextAlias"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/alias_text"
                            android:inputType="textPersonName" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/general_edittext_border_bg_primary"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <EditText
                            android:id="@+id/editTextDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_text"
                            android:minLines="2"
                            android:maxLines="5"
                            android:scrollbars="vertical"
                            android:inputType="textMultiLine"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/general_edittext_border_bg_primary"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2">


                            <EditText
                                android:id="@+id/editTextJalousieUnitPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/unitprice_text"
                                android:ems="10"
                                android:inputType="number" />

                        </android.support.design.widget.TextInputLayout>



                        <Button
                            android:id="@+id/btnCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hesap"
                            android:textColor="@android:color/white"
                            android:fontFamily="@font/roboto_regular"
                            android:layout_weight="2"
                            android:background="@color/primaryDarkColor"/>


                    </LinearLayout>








                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/general_edittext_border_bg_primary"
                    android:padding="5dp">
                    <ProgressBar
                        android:id="@+id/progress_bar_calc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />
                    <TextView
                        android:id="@+id/textViewJalousieM2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_weight="1"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/textViewJalousieTotalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="15sp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/cancel_button_text"
                        android:background="@android:color/holo_red_light"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/save_button_text"
                        android:textColor="#ffffff"
                        android:background="@color/primaryDarkColor" />


                </LinearLayout>



            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
